dynamix/force-app/main/default/objects/Suggested_Property__c/Suggested_Property__c.object-meta.xml
<CustomObject>
    <label>Suggested Property</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Suggestion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggested Property</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>