dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Ap__c.field-meta.xml
<CustomField>
    <fullName>Ap__c</fullName>
    <label>Approval Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>