dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <label>Approval Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent for custom cost-sheet approval</fullName>
                <label>Sent for Custom Cost-Sheet Approval</label>
            </value>
            <value>
                <fullName>Approval for mark Property In Process</fullName>
                <label>Approval for Mark Property As In Progress</label>
            </value>
            <value>
                <fullName>Sent for discount Approval</fullName>
                <label>Sent for Discount Approval</label>
            </value>
            <value>
                <fullName>Approval to mark Property In Process</fullName>
                <isActive>false</isActive>
                <label>Approval to mark Property In Process</label>
            </value>
            <value>
                <fullName>Custom payment plan</fullName>
                <isActive>false</isActive>
                <label>Custom payment plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>