dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Approval_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Suggested_Property2</relationshipName>
    <type>Lookup</type>
</CustomField>