dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Both_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Both_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Both Approvals</label>
    <type>Checkbox</type>
</CustomField>