dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Cost_Sheet_Link__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Link__c</fullName>
    <label>Cost Sheet Link</label>
    <type>Url</type>
</CustomField>