dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Discount_percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_percentage__c</fullName>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>