dynamix/force-app/main/default/objects/Suggested_Property__c/fields/EOI_CA__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA__c</fullName>
    <label>EOI/CA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOI</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>