dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Lock_Record__c.field-meta.xml
<CustomField>
    <fullName>Lock_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Record</label>
    <type>Checkbox</type>
</CustomField>