dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Suggested Property</relationshipLabel>
    <relationshipName>Suggested_Property</relationshipName>
    <type>Lookup</type>
</CustomField>