dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Payment_Plan_Detail__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Detail__c</fullName>
    <label>Payment Plan Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>