dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Listed</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Send for Cost-Sheet Approval</fullName>
            </value>
            <value>
                <fullName>Custom Payment Plan Approved</fullName>
            </value>
            <value>
                <fullName>Custom Payment Plan Reject</fullName>
            </value>
            <value>
                <fullName>Send for Cost-Sheet Discount Approval</fullName>
            </value>
            <value>
                <fullName>Discount Approved</fullName>
            </value>
            <value>
                <fullName>Discount Reject</fullName>
            </value>
            <value>
                <fullName>Send for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Confirmed Allocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>