dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Suggested_Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Property_Name__c</fullName>
    <formula>Unit__r.Name + &apos; &apos; +  TEXT(Unit__r.Flat_Type__c) + &apos; &apos; +  Unit__r.Tower__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suggested Property Name</label>
    <type>Text</type>
</CustomField>