dynamix/force-app/main/default/objects/Suggested_Property__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Suggested Property</relationshipLabel>
    <relationshipName>Suggested_Property</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>